--- a/package.json
+++ b/package.json
@@ -24,8 +24,16 @@
     "webpack": "^5.79.0"
   },
   "dependencies": {
+    "axios": "^1.3.5",
+    "bcrypt": "^5.1.0",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "gitignore": "^0.7.0"
+    "gitignore": "^0.7.0",
+    "helmet": "^6.1.5",
+    "jsonwebtoken": "^9.0.0",
+    "mongodb": "^5.2.0",
+    "mongoose": "^7.0.3"
   }
 }
