--- a/package.json
+++ b/package.json
@@ -15,13 +15,7 @@
   "author": "Yusri Caloyloy",
   "license": "ISC",
   "devDependencies": {
-    "@babel/cli": "^7.21.0",
-    "@babel/core": "^7.21.4",
-    "@babel/preset-env": "^7.21.4",
-    "@babel/preset-react": "^7.18.6",
-    "nodemon": "^2.0.22",
-    "react-hot-loader": "^4.13.1",
-    "webpack": "^5.79.0"
+    "nodemon": "^2.0.22"
   },
   "dependencies": {
     "axios": "^1.3.5",
