--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
+    "react-scroll-to-bottom": "^4.2.0",
     "simple-peer": "^9.11.1",
     "socket.io-client": "^4.6.1",
     "web-vitals": "^2.1.4"
