--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,9 @@
     "accepts": "^1.3.8",
     "moment": "^2.29.4",
     "peerjs": "^1.4.7",
+    "process": "^0.11.10",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
@@ -17,6 +19,7 @@
     "react-scroll-to-bottom": "^4.2.0",
     "simple-peer": "^9.11.1",
     "socket.io-client": "^4.6.1",
+    "tailwindcss": "^3.3.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -43,8 +46,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "tailwindcss": "^3.3.1"
   }
 }
