--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "accepts": "^1.3.8",
+    "js-cookie": "^3.0.5",
     "moment": "^2.29.4",
     "peerjs": "^1.4.7",
     "process": "^0.11.10",
