--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-scroll-to-bottom": "^4.2.0",
     "simple-peer": "^9.11.1",
     "socket.io-client": "^4.6.1",
+    "sweetalert2": "^11.7.5",
     "tailwindcss": "^3.3.1",
     "web-vitals": "^2.1.4"
   },
