--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nodemon": "^2.0.22"
   },
   "dependencies": {
+    "accepts": "^1.3.8",
     "axios": "^1.3.5",
     "bcrypt": "^5.1.0",
     "compression": "^1.7.4",
