--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "web chat app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "concurrently \"npm run server\" \"npm run client\"",
+    "server": "cd server && npm start",
+    "client": "cd client && npm start"
   },
   "keywords": [
     "nodejs",
